<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".HighScore">

    <TextView
        android:id="@+id/highscore"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:padding="16dp"
        android:textStyle="bold"/>


    <TableRow>

        <TextView
            android:id="@+id/HSname"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/HSeasy"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/HSmedium"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HShard"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HSpunknte"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/punkte"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:textAlignment="center"
        android:id="@+id/HSrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="383dp" />

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="218dp">

        <Button
            android:id="@+id/HSreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="16dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/HSLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/HSreset" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</TableLayout>